# Vulngate

./: CMakeLists.txt  README.md
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Engine/include/: Engine.hpp  MainMenu.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp
Engine/resources/glsl/: fragment_shader.glsl  vertex_shader.glsl
Engine/src/: Engine.cpp  EntryPoint.cpp  MainMenu.cpp  Renderer.cpp  SceneManager.cpp
